<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallScheduleFragment"
    android:theme="@style/Theme.Schedule">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/title_call"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:shadowColor="#888888"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/days_of_the_week"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:shadowColor="#888888"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/time_1"
        android:shadowColor="#888888"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/time_2"
        android:shadowColor="#888888"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/time_3"
        android:shadowColor="#888888"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/time_4"
        android:shadowColor="#888888"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/Thursday"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:shadowColor="#888888"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/Thursday_time_1"
        android:shadowColor="#888888"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/Thursday_time_2"
        android:shadowColor="#888888"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/Thursday_time_3"
        android:shadowColor="#888888"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/Thursday_time_4"
        android:shadowColor="#888888"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/Thursday_time_5"
        android:shadowColor="#888888"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView12" />

</androidx.constraintlayout.widget.ConstraintLayout>
