<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="280dp"
        android:layout_height="196dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/logo_main"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/title_login"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <LinearLayout
        android:id="@+id/email_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title">

        <ImageView
            android:id="@+id/icon_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/user_icon" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/hind_email_login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_lin">

        <ImageView
            android:id="@+id/icon_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/password_icon" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/hind_password_login"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/color2"
        android:fontFamily="@font/montserrat"
        android:text="@string/btn_login_continue"
        app:cornerRadius="10dp"
        app:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_lin" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn">

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:gravity="center"
            android:text="@string/text_register"
            android:textColor="#808080"
            android:textSize="15sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>