<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_btn"
        android:src="@drawable/back_icon"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="282dp"
        android:layout_height="228dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/register_login"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_lin"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email_icon"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/hind_email_login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_lin"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/email_lin"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_icon"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/username_et"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/hind_username" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_lin"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/username_lin"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password_icon"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/hind_password_login"
            android:inputType="textPassword"
            />
    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/group_lin"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/password_lin"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/group"
            android:layout_gravity="center_vertical"
            />

        <Spinner
            android:id="@+id/groupSpinner"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:entries="@array/group_array"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_group"
            />
    </LinearLayout>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color2"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="20dp"
        android:text="@string/register_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_lin" />

</androidx.constraintlayout.widget.ConstraintLayout>